# cpp-osx-cg_event

./: README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  main.cpp
example-app/: CMakeLists.txt  Makefile  README.md
example-app/Resources/: Info.plist  MainMenu.xib
example-app/src/: AppDelegate.mm
include/pqrs/osx/: cg_event.hpp
include/pqrs/osx/cg_event/: aux_control_button.hpp  dispatcher.hpp  key_code.hpp
tests/: cget-requirements.txt
tests/src/: CMakeLists.txt  Makefile  mouse_test.cpp  project.yml  test.cpp  test_event_factory.h  test_event_factory.mm
